@@ -1,3 +1,9 @@
+2008-01-28  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accerciser.py: Make event handling asynchronous.
+	* plugins/event_monitor.py: Remove decoupling of event handling, we
+	don't need to worry about it any more.
+
 2008-01-26  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/accerciser.py: Fixed hang when enabling
